--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,95 @@
 ---
-title: "zg.dev"
+title: "Penguins"
+format:
+  html:
+    toc: false
+    keep-hidden: true
+    code-tools: true
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
 ```{r}
-1 + 1
+ojs_define(
+  data = readr::read_csv("https://raw.githubusercontent.com/quarto-dev/quarto-web/8159986c9ea1c956b9340663b2a4f03f3b75c9e2/docs/interactive/ojs/examples/palmer-penguins.csv")
+  )
 ```
+
+
+A simple example based on Allison Horst's [Palmer Penguins](https://allisonhorst.github.io/palmerpenguins/) dataset. Here we look at how penguin body mass varies across both sex and species (use the provided inputs to filter the dataset by bill length and island):
+
+```{ojs}
+//| panel: input
+viewof bill_length_min = Inputs.range(
+  [32, 50], 
+  {value: 35, step: 1, label: "Bill length (min):"}
+)
+viewof islands = Inputs.checkbox(
+  ["Torgersen", "Biscoe", "Dream"], 
+  { value: ["Torgersen", "Biscoe"], 
+    label: "Islands:"
+  }
+)
+```
+
+::: panel-tabset
+## Plot
+
+```{ojs}
+Plot.rectY(filtered, 
+  Plot.binX(
+    {y: "count"}, 
+    {x: "body_mass", fill: "species", thresholds: 20}
+  ))
+  .plot({
+    facet: {
+      data: filtered,
+      x: "sex",
+      y: "species",
+      marginRight: 80
+    },
+    marks: [
+      Plot.frame(),
+    ]
+  }
+)
+```
+
+## Data
+
+```{ojs}
+Inputs.table(filtered)
+```
+:::
+
+hello world
+```{ojs}
+filtered = transpose(data).filter(function(penguin) {
+  return bill_length_min < penguin.bill_length &&
+         islands.includes(penguin.island);
+})
+```
+
+
+```{ojs}
+import {pieChart, surveyCompareBars, surveyHistograms, longList, bigPercentage, bigPercentageWithDescription} from "d/cf42a44ac2f24b7a"
+
+```
+
+```{ojs}
+roles = d3.tsvParse(`Role	dataRole	pct	count
+Hobbyist	support	30.6	174
+Front-end developer	support	14.2	81
+Academic or government researcher	support	14.2	81
+Data analyst or business analyst	primary	9.65	55
+Data scientist	primary	7.37	42
+Data architect	primary	3.3	19
+Student	support	5.61	32
+Educator	support	5.09	29
+Journalist	support	2.98	17
+Other	support	6.32	39`, d3.autoType)
+```
+
+
+```{ojs}
+pieChart(roles, "Role", "count", "dataRole", "Responses for data-centered roles")
+```
+
