--- a/about.qmd
+++ b/about.qmd
@@ -1,9 +1,9 @@
 ---
-title: "About"
+title: "Source: ❤️"
 ---
 
-About this site
+Thank you to all who worked on:
 
-```{r}
-1 + 1
-```
+<https://quarto.org/>
+
+# 
