mod shiny full page

--- a/shiny.qmd
+++ b/shiny.qmd
@@ -10,8 +10,16 @@ format:
     code-tools: true
 ---
 
-```{=html}
- <iframe id="example1" src="https://zac-garland.shinyapps.io/world-dev-indicators/" style="border: none; width: 100%; height: 720px" frameborder="0"></iframe>
+```{r}
+#| column: screen
+shiny::HTML('
+<iframe id="example1" src="https://zac-garland.shinyapps.io/world-dev-indicators/" style="border: none; width: 100%; height: 720px" frameborder="0"></iframe>
+')
+
+
 ```
+
+
+
 
 
